# LexFolketsLexicon

./: README.md  api.py  generate_individual_json_files.py  generate_json_files.py  main.py  pyproject.toml  requirements.txt
