[tool.poetry]
name = "lexfolketslexicon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.1"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.1"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
